# alluno-gamepad-sys

./: Cargo.toml  README.md
.github/workflows/: cicd.yml
src/: device.rs  lib.rs  linux.rs  windows.rs
tests/: integration.rs
